<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/background">

        </androidx.appcompat.widget.LinearLayoutCompat>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageMe"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:src="@drawable/me" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageMe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nim"
            android:textColor="#466B5C"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nim"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nama"
            android:textColor="#466B5C"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/program_studi"
            android:textColor="#466B5C"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/universitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prodi"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"

            android:text="@string/universitass"
            android:textColor="#466B5C"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/tableDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/universitas"
            android:layout_margin="10dp"
            android:padding="4dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/deskripsi"
                    android:textColor="#4A5847"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonTelepon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_call_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonEmail"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_email_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonMaps"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_map_24" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>